views: implement NativeWidgetMac::StackAbove

This change implements StackAbove in MacViews. Whether StackAbove is "sticky" or not is undocumented
but it appears to be not sticky on Linux or Windows, which is fortunate since
non-sticky is the only implementable behavior on Mac.

Bug: 825937
Change-Id: Idaa4e90fd123b0d6c5bab60de3fb24417a488de1
Reviewed-on: https://chromium-review.googlesource.com/986552
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549301}
Former-commit-id: 7dbdba5d6ab5e8354cee17df383e411c915f2f4a